# pyben

./: .MANIFEST  .deepsource.toml  .editorconfig  .gitignore  .prospector.yml  .pylintrc  .setup.cfg  MANIFEST.in  Makefile  README.md  corbertura.xml  coverage.xml  mkdocs.yml  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: CI.yml  workflow.yml
assets/: pyben.psd
docs/: 404.html  index.html  objects.inv  pyben.html  search.json  sitemap.xml
docs/LICENSE/: index.html
docs/about/: index.html
docs/api/: index.html
docs/examples/: index.html
docs/pyben/: bencode.html  classes.html
docs/search/: search_index.json
pyben/: __init__.py  api.py  bencode.py  classes.py  exceptions.py  version.py
site/: LICENSE.md  api.md  examples.md  index.md
tests/: __init__.py  context.py  tempfile.pyben  test_api.py  test_classes.py  test_funcs.py  testdata.py
