[metadata]
name = pyben
url = https://github.com/alexpdev/pyben
description = Functions for encoding and decoding bencode.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
packages = find:
include_package_data = True
zip_safe = False



[bdist_wheel]
universal=1

[aliases]
test=pytest
