[metadata]
name = pyben
long_description_content_type = text/markdown
long_description = file: README.md
description = Functions for encoding and decoding bencode.
license_file = LICENSE
version = 0.3.3
classifiers =
    Environment :: Console
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
url = https://github.com/alexpdev/pyben
author = alexpdev
author_email = alexpdev@pm.me


[options]
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools
    wheel

[bdist_wheel]
universal=1

[aliases]
test=pytest
